Add new test with DataManager